app/assets/stylesheets/application.css.scss
/* ... */
.what-is-text {
  font-size: 16px;
  font-weight: normal;
}

.what-is-image {
  width: 8rem;
}

@keyframes bg-animation {
  0% {
    background-position: left;
  }

  25% {
    background-position: right;
  }

  50% {
    background-position: left top;
  }

  100% {
    background-position: bottom right;
  }
}

.join-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin: 0 auto;
  padding: 25%;
  box-sizing: border-box;
  align-items: center;
  border-radius: 20px;
  background-image: linear-gradient(45deg, #004cb6, #14013b);
  background-size: 500%;
  background-position: top;
  animation: bg-animation 20s infinite alternate;
  box-shadow: 1px 1px 5px #001430;
}

.join-today {
  font-size: 40px;
  line-height: normal;
  word-wrap: normal;
  text-align: center;
  color: white;
}

.action-button.sign-up-button {
  margin-top: 50px;
  display: inline-block;
}

// calendar

details {
  background-color: rgb(240, 240, 240);
}

details summary {
  padding: 20px;
  font-size: 20px;
}

summary {
  background-image: url("open.svg");
  background-repeat: no-repeat;
  background-size: 25px;
  background-position: 95%;
  list-style: none;
}

details[open] summary {
  background-image: url("close.svg");
}


.calendar-event-card {
  margin: 0;
  display: flex;
  flex-direction: row;
  height: 100px;
  width: 100%;
  background-size: cover;
  background-position: center;
  overflow: hidden;
  justify-content: stretch;
  align-items: center;
  font-size: 15px;
  font-weight: bold;
}

.calendar-event-date {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-width:100px;
  background-color: black;
  color: white;
  padding: 10px;
  height: 100%;
}

.calendar-event-title {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width:auto;
  background-color: rgba(0,0,0,0.5);
  color: white;
  padding: 10px;
  height: 100%;
  width: 100%;
}

.calendar-no-events {
  display: flex;
  height: 100px;
  width: 100%;
  justify-content: center;
  align-items: center;
  font-size: 15px;
  font-weight: bold;
  background-color: rgb(230,230,230);
}

